package com.dah.domain;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class Area {
  private Integer id;
  private String name;
}
