@startuml
  skinparam linetype ortho

  enum Verdict {
    REJECT
    WEAK_REJECT
    WEAK_ACCEPT
    ACCEPT
  }

  enum Category {
    FULL
    SHORT
    DEMO
  }

  class Area {
    - title: String
    - event: SubmissionEvent
    - articles: List<Article>
  }

  class SubmissionEvent {
    - name: String
    - city: String
    - start: Date
    - end: Date
    - areas: List<Area>
    - articles: List<Article>
    - category: Category
    - active: boolean
  }

  SubmissionEvent *-- Area 
  SubmissionEvent o-- Category

  class User { 
    - name: String 
    - email: String
    - password: String
    - institution: String
    - articles: List<Article>
  }

  class Reviewer {
    - user: User
    - reviews: List<Review>
    - areas: List<Area>
  }

  Reviewer o-- Area
  Reviewer o-- User

  class Review {
    - contributions: String
    - critiques: String
    - verdict: Verdict
    - article: Article
    - reviewer: Reviewer
  }

  Review o-- Verdict
  Review o-- Reviewer : reviewer

  package State {
    class Article {
      - id: Integer
      - title: String
      - abstractText: String
      - event: SubmissionEvent
      - authors: List<User>
      - areas: List<Area>
      - reviews: List<Review>
      - status: ArticleState
      + setStatus(status: ArticleState)
    }

    Article o-- User : authors
    Article o-- Area : areas

    ' inverter essa relacao '
    Article --o Review
    Article o-left- ArticleState

    interface ArticleState {
      + startReview()
      + accept()
      + reject()
      + isFinished(): boolean
      + isReviewable(): boolean
      + isAssignableToReviewer(): boolean
    }

    abstract class ArticleStateDefault {
      - article: Article
      + {abstract} startReview()
      + {abstract} accept()
      + {abstract} reject()
      + {abstract} isFinished(): boolean
      + {abstract} isReviewable(): boolean
      + {abstract} isAssignableToReviewer(): boolean
    }

    ArticleStateDefault .up.|> ArticleState

    class SubmittedState extends ArticleStateDefault {
      - article: Article
      + startReview()
      + accept()
      + reject()
      + isFinished(): boolean
      + isReviewable(): boolean
      + isAssignableToReviewer(): boolean
    }

    class UnderReviewState extends ArticleStateDefault {
      - article: Article
      + startReview()
      + accept()
      + reject()
      + isFinished(): boolean
      + isReviewable(): boolean
      + isAssignableToReviewer(): boolean
    }

    class AcceptedState extends ArticleStateDefault {
      - article: Article
      + startReview()
      + accept()
      + reject()
      + isFinished(): boolean
      + isReviewable(): boolean
      + isAssignableToReviewer(): boolean
    }

    class RejectedState extends ArticleStateDefault {
      - article: Article
      + startReview()
      + accept()
      + reject()
      + isFinished(): boolean
      + isReviewable(): boolean
      + isAssignableToReviewer(): boolean
    }
  }

  package Strategy {
    class DistributionService {
      - strategy: DistributionStrategy
      + setStrategy(strat: Strategy)
      + distribute(articles: List<Article>, reviewers: List<User>)
    }

    DistributionService o-- DistributionStrategy
    DistributionService ..> Article
    DistributionService ..> User

    interface DistributionStrategy {
      + distribute(articles: List<Article>, reviewers: List<User>)
    }

    class PairStrategy implements DistributionStrategy {
      + distribute(articles: List<Article>, reviewers: List<User>)
    }
  }

  class AuthService << (S,#FF7700) Singleton >> {
    - currUser: Optional<User>
    - userService: UserService
    + authenticate(data: AuthData): User
    + isAuthenticated(): boolean
    + getCurrUserRoles(): List<Role>
    + getCurrUser(): User
    + logout()
  }

  AuthService o-- UserService
  AuthService --> User
  AuthService ..> AuthData

  class UserService implements Subscriber {
    - repo: UserRepository
    + getByEmail(email): Optional<User>
    + createUser(user: User)
    + demoteReviewers()
    + update(event: SubmissionEventStartedEvent)
  }

  UserService --> User
  UserService o-- UserRepository
  UserService ..> SubmissionEventStartedEvent

  class SubmissionEventService {
    - repo: Repository<SubmissionEvent, Integer>
    - publisher: Publisher<T>
    + start(data: SubmissionEvent)
    + reset()
    + addAreas(areas)
  }

  SubmissionEventService o-- Repository
  SubmissionEventService o-- AreaService
  SubmissionEventService o-- UserService
  SubmissionEventService o-- ArticleService
  SubmissionEventService o-- ReviewService
  SubmissionEventService ..> SubmissionEvent
  SubmissionEventService o-- EventPublisher

  interface Repository<T, ID> {
    + findAll(): List<T>
    + findById(id: ID): T
    + save(object: T): T
    + deleteAll()
  }
  note left of Repository : Interface com tipo genérico

  interface UserRepository<User, Integer> extends Repository {
    + findAll(): List<User>
    + findById(id: Integer): User
    + findByEmail(email: String): User
    + save(object: User): User
    + deleteAll()
  }

  note right of UserRepository : Extensão de Repository com tipo definido

  class ArticleService implements Subscriber {
    - repo: Repository<Article, Integer>
    + removeAll()
    + update(event: SubmissionEventStartedEvent)
  }

  ArticleService ..> SubmissionEventStartedEvent
  ArticleService o-- Repository

  class ReviewService implements Subscriber {
    - repo: Repository<Review, Integer>
    + removeAll()
    + update(event: SubmissionEventStartedEvent)
  }

  ReviewService ..> SubmissionEventStartedEvent
  ReviewService o-- Repository

  class AreaService implements Subscriber {
    - repo: Repository<Area, Integer>
    + removeAll()
    + update(event: SubmissionEventStartedEvent)
  }

  AreaService ..> SubmissionEventStartedEvent
  AreaService o-- Repository
  
  class EventPublisher {
    - subscribers: Map<Class<?>, List<Subscriber<?>>>
    + sub<T>(eventType: Class<T>, s: Subscriber<T>)
    + unsub<T>(eventType: Class<T>, s: Subscriber<T>)
    + publish<T>(event: T)
  }

  EventPublisher --> Subscriber

  interface Subscriber<T> {
    + update(event: T)
  } 
  note left of Subscriber : Interface com tipo genérico

  record SubmissionEventStartedEvent

  class AuthData { 
    + email: String 
    + password: String
  }

@enduml
